# polylang

./: .gitignore  .gitmodules  CMakeLists.txt  PolyLang_Master_Combined.txt  VULNERABILITY_REPORT.md
.claude/: settings.local.json
.github/scripts/: assemble_godot_addon.sh  package_addon.sh  verify_release_artifacts.sh
.github/workflows/: CMakeLists.txt  README.md  build-android.yml  build-linux.yml  build-matrix.yml  build-windows.yml  build.yml  codeql.yml  release.yml  testing .yml  vendor.yml
adapters/angelscript/: polylang_angelscript_adapter.cpp
adapters/go/: go.mod  polylang_go_adapter.go  polylang_go_shim.c
adapters/javascript/: polylang_js_adapter.cpp
adapters/julia/: polylang_julia_adapter.cpp
adapters/odin/: odin_build_pipeline.sh  polylang_odin_adapter.cpp
adapters/rust/src/: lib.rs
docs/: THREAT_MODEL.md
include/: pl_adapter_vtable.h
polylang plugin/: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeLists.windows.cmake  CMakePresets.json  PolyLang_Full_Rebuild_Reference-1.docx
polylang plugin/.github/workflows/: build.yml
polylang plugin/adapters/csharp/: PolyLangCSharpAdapter.cs  polylang_cs_shim.c
polylang plugin/adapters/go/: polylang_go_adapter.go
polylang plugin/adapters/haxe/: polylang_haxe_adapter.cpp
polylang plugin/adapters/javascript/: polylang_js_adapter.cpp
polylang plugin/adapters/julia/: polylang_julia_adapter.cpp
polylang plugin/adapters/kotlin/: PolyLangScript.kt  polylang_kotlin_adapter.cpp
polylang plugin/adapters/lua/: polylang_lua_adapter.cpp
polylang plugin/adapters/nim/: polylang_nim_adapter.nim
polylang plugin/adapters/odin/: odin_build_pipeline.ps1  odin_build_pipeline.sh  odin_build_pipeline_android.sh  polylang_odin_adapter.cpp  polylang_odin_script_api.odin  polylang_odin_shim.c  polylang_odin_shim.odin
polylang plugin/adapters/python/: polylang_python_adapter.cpp
polylang plugin/adapters/rust/: Cargo.toml
polylang plugin/adapters/squirrel/: polylang_squirrel_adapter.cpp
polylang plugin/adapters/swift/: polylang_swift_adapter.swift  polylang_swift_shim.c
polylang plugin/adapters/typescript/: polylang_ts_adapter.cpp
polylang plugin/adapters/wren/: polylang_wren_adapter.cpp
polylang plugin/adapters/zig/: build.zig
polylang plugin/adapters/zig/src/: main.zig
polylang plugin/addons/polylang/: mod_panel.gd  plugin.cfg  plugin.gd  polylang.gdextension  profiler_panel.gd
polylang plugin/build_win/: ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  polylang.slnx  polylang.vcxproj.filters  polylang_adapter_python.vcxproj.filters
polylang plugin/build_win/godot-cpp/: ALL_BUILD.vcxproj.filters  INSTALL.vcxproj.filters  cmake_install.cmake  generate_bindings.vcxproj.filters  godot-cpp.slnx  godot-cpp.vcxproj.filters
polylang plugin/build_win/godot-cpp/godot-cpp.dir/Release/: libgodot-cpp.windows.template_debug.x86_64.lib.recipe
polylang plugin/build_win/godot-cpp/godot-cpp.dir/Release/godot-cpp.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  godot-cpp.lastbuildstate
polylang plugin/build_win/godot-cpp/x64/Release/generate_bindings/generate.94EED7C6.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
polylang plugin/build_win/polylang.dir/Release/: polylang.dll.recipe
polylang plugin/build_win/polylang.dir/Release/polylang.tlog/: CL.10440.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
polylang plugin/build_win/polylang_adapter_python.dir/Release/: polylang_adapter_python.dll.recipe
polylang plugin/build_win/polylang_adapter_python.dir/Release/polylang.630A8C96.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  polylang_adapter_python.lastbuildstate
polylang plugin/build_win/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
polylang plugin/build_win/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
polylang plugin/build_win/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
polylang plugin/build_win/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
polylang plugin/include/: pl_adapter_vtable.h
polylang plugin/src/: compile_cache.cpp  hot_reload_scheduler.cpp  hot_reload_scheduler.hpp  mod_loader.cpp  pl_async_runtime.cpp  pl_async_runtime.hpp  pl_bridge.cpp  pl_bridge.hpp  pl_coroutine_scheduler.cpp  pl_cross_inherit.cpp  pl_cross_inherit.hpp  pl_engine_api_bridge.cpp  pl_engine_api_bridge.hpp  pl_export_parser.cpp  pl_export_parser.hpp  pl_language_util.hpp  pl_polyglot_parser.cpp  pl_polyglot_parser.hpp  pl_polyglot_script.cpp  pl_polyglot_script.hpp  pl_profiler.cpp  pl_profiler.hpp  pl_resource_bridge.hpp  pl_sandbox_tiers.hpp  pl_signal_bus.hpp  pl_state_transfer.hpp  polylang_language.cpp  polylang_language.hpp  polylang_script.cpp  polylang_script_instance.cpp  polylang_script_instance.hpp  polylang_script_instance_msvc.hpp  register_types.cpp  runtime_manager.cpp  runtime_manager.hpp
polylang plugin/tests/: odin_adapter_test.cpp  sidecar_config_test.cpp
src/: compile_cache.hpp  hot_reload_scheduler.cpp  mod_loader.hpp  pl_bridge.cpp  pl_bridge.hpp  pl_coroutine_scheduler.hpp  pl_cross_inherit.cpp  pl_cross_inherit.hpp  pl_engine_api_bridge.hpp  pl_polyglot_script.cpp  pl_polyglot_script.hpp  pl_profiler.hpp  pl_resource_bridge.cpp  pl_resource_bridge.hpp  pl_signal_bus.cpp  pl_signal_bus.hpp  pl_state_transfer.cpp  polylang_language.cpp  polylang_script.cpp  polylang_script.hpp  polylang_script_instance.cpp  polylang_script_instance.hpp  register_types.cpp  register_types.hpp  runtime_manager.hpp  variant_bridge.cpp  variant_bridge.hpp
tests/: polylang_v65_test.cpp  sandbox_escape_test.cpp
(+3 files in other folders)
